<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TicketPrint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:text="با نصب و استفاده از سوپر اپلیکیشن ایراناپ,\n 3 پارک هدیه بگیرید."
            android:textAlignment="center"
            android:textSize="18sp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="-4dp"
            android:background="@drawable/black_border"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TicketPrint.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:gravity="right"
                android:lineSpacingExtra="@dimen/_1sdp"
                android:text="@string/irana_website_link"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/prefix_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/black_border"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/plate_area"
                style="@style/TicketPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_1sdp"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/print_template_row_border"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/place_tv"
                style="@style/TicketPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/print_template_row_border"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/start_time_tv"
                style="@style/TicketPrint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black"
                android:textDirection="ltr"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TicketPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="شروع پارک:"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/print_template_row_border"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/price_tv"
                style="@style/TicketPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/print_template_row_border"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/debt_tv"
                style="@style/TicketPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/postfix_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <FrameLayout
            android:id="@+id/note_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_black_double"
            android:padding="4dp"
            android:visibility="gone">
        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/black_border"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TicketPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:layout_marginRight="8dp"
                android:gravity="right"
                android:lineSpacingExtra="@dimen/_1sdp"
                android:text="پشتیبان شما:"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/support_phone"
                style="@style/TicketPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:textDirection="ltr"
                android:lineSpacingExtra="@dimen/_1sdp"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            style="@style/TicketPrint.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/print_header_1"
            android:textAlignment="center"
            android:textSize="19sp" />

        <TextView
            style="@style/TicketPrint.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:text="@string/iranapp"
            android:textAlignment="center"
            android:textFontWeight="900"
            android:textSize="24sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
